--- a/css/main.css
+++ b/css/main.css
@@ -12,7 +12,7 @@ body {
 
 .content {
     width: 100vw;
-    height: 90vh;
+    height: 100vh;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -49,7 +49,7 @@ body {
     position: relative;
     border-radius: 15px;
     background-color: #ffffff;
-    box-shadow: 0px 10px 50px 5px hsl(227, 10%, 46%);
+    box-shadow: 0px 15px 40px 1px hsl(227, 10%, 46%);
 }
 
 .card__heard {
@@ -145,10 +145,11 @@ body {
 /** Attribution */
 
 .attribution {
+    bottom: 0px;
     padding: 10px;
+    position: fixed;
     font-size: 12px;
     font-weight: 300;
-    position: relative;
     text-align: center;
     color: hsl(229, 23%, 23%); 
 }
@@ -157,4 +158,8 @@ body {
     color: #ffffff; 
     font-weight: 700;
     text-decoration: none;
+}
+
+.attribution a:hover {
+    font-weight: 300;
 }
